# inbd

./: Makefile.am  configure.ac
files/etc/init.d/: inbd
src/: inbd.c
